fixed learn-more-section's jumping effect happened bcoz of viewport

--- a/src/styles/_home.sass
+++ b/src/styles/_home.sass
@@ -113,7 +113,8 @@
 
 .learn-more-section
     width: 374px
-    margin: auto
+    margin-left: auto
+    margin-right: auto
     text-align: left
     background-color: #F2F2F2
     height: 100px
@@ -188,8 +189,8 @@
 // for mobile//
 @media screen and (min-width: 400px) and ( max-width: 699px )
     .learn-more-section
-        p 
-            margin-top: 25px
+        // p 
+        //     margin-top: 25px
     // .home-page
     //     width: 100vw
     //     // .MuiCard-root
@@ -204,8 +205,8 @@
 
 @media screen and ( max-width:  399px)
     .learn-more-section
-        p 
-            margin-top: 20px
+        // p 
+        //     margin-top: 20px
 //     .home-page
 //          width: 90vw
 //          margin-top: 7vh
